kube/maintenance-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: maintenance
  name: maintenance
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10443
  selector:
    name: maintenance
